--- a/Commonfee-management-1/src/app/user/register/register.component.html
+++ b/Commonfee-management-1/src/app/user/register/register.component.html
@@ -1,48 +1,37 @@
+<div class="form-container">
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="login">
+    <h1 style="text-align: center">Register</h1>
 
-    <div class="registration-form">
-       <h2>ลงทะเบียน</h2>
-       <form>
-         <div class="form-row">
-           <div class="form-group">
-             <label for="username">ชื่อผู้ใช้</label>
-             <input type="text" id="username" class="form-control" />
-           </div>
-           <div class="form-group">
-             <label for="firstName">ชื่อ</label>
-             <input type="text" id="firstName" class="form-control" />
-           </div>
-         </div>
-         <div class="form-row">
-           <div class="form-group">
-             <label for="password">รหัสผ่าน</label>
-             <input type="password" id="password" class="form-control" />
-           </div>
-           <div class="form-group">
-             <label for="lastName">นามสกุล</label>
-             <input type="text" id="lastName" class="form-control" />
-           </div>
-         </div>
-         <div class="form-row">
-           <div class="form-group">
-             <label for="confirmPassword">ยืนยันรหัสผ่าน</label>
-             <input type="password" id="confirmPassword" class="form-control" />
-           </div>
-           <div class="form-group">
-             <label for="houseNumber">บ้านเลขที่</label>
-             <input type="text" id="houseNumber" class="form-control" />
-           </div>
-         </div>
-         <div class="form-row">
-           <div class="form-group">
-             <label for="email">อีเมล</label>
-             <input type="email" id="email" class="form-control" />
-           </div>
-           <div class="form-group">
-             <label for="idCard">เลขบัตรประชาชน</label>
-             <input type="text" id="idCard" class="form-control" />
-           </div>
-         </div>
-         <button type="submit" class="submit-btn">ลงทะเบียน</button>
-       </form>
-     </div>
- 
+    <div class="input-field">
+      <input formControlName="firstname" placeholder="Firstname" maxlength="50" required class="box" />&nbsp;
+      <input formControlName="lastname" placeholder="Lastname" maxlength="50" required class="box" />
+    </div>
+
+    <div class="input-field">
+      <input type="text" formControlName="username" placeholder="Username" maxlength="50" required class="box" />&nbsp;
+      <input type="email" formControlName="email" placeholder="Email" maxlength="50" required class="box"/>  <br>
+    </div>
+
+    <div class="input-field">
+      <input type="number" formControlName="houseID" placeholder="your house ID" maxlength="50" required class="box" />&nbsp;
+      <input type="number" formControlName="IDcard" placeholder="your card ID" maxlength="50" required class="box" />
+    </div>
+    <div class="input-field">
+      <input formControlName="phone" placeholder="Your phone" maxlength="10" required class="box" style="width: 508px;"/>
+    </div>
+
+    <div class="input-field">
+      <input type="password" formControlName="password" placeholder="Password" maxlength="50" required class="box"
+        style="width: 508px;" />
+    </div>
+
+    <div class="input-field">
+      <input type="password" formControlName="confirmPassword" placeholder="Confirm Password" maxlength="50" required
+        class="box" style="width: 508px;" />
+    </div>
+    <button type="submit" class="btn" style="color:#fff; background-color:#6fb9fa; border-radius: 50px;">Register</button>
+    <div class="text-center pt-4 text-muted">Already have an account? <a id="forget" routerLink="/login">Sign in</a>
+    </div>
+
+  </form>
+</div>
