--- a/Commonfee/src/app/user/login/login.component.html
+++ b/Commonfee/src/app/user/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="form-container">
     <form (ngSubmit)="onLogin()">
       <h3 style="text-align: center; color:#fff">เข้าสู่ระบบลูกบ้าน</h3>
@@ -43,9 +44,8 @@
       >
         Login
       </button>
-      <div class="text-center pt-4 ">Don't have account? <a id="forget" routerLink="/register">sign up</a></div>
+      <div class="text-center pt-4 ">คุณยังไม่ได้ลงทะเบียนใช่ไหม? <a id="forget" routerLink="/register">ลงทะเบียน</a></div>
   
 
     </form>
   </div>
-  
