--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -34,7 +34,9 @@
 </ul>
 <ul>
   <li class="nav-item logout">
-    <a class="nav-link" routerLink="/login"><i class="bi bi-box-arrow-right"></i></a>
+    <a class="nav-link " (click)="logout()">
+      <i class="bi bi-box-arrow-left "style="margin-left=0;" ></i>
+    </a>
   </li>
 </ul>
 </nav>
