--- a/Commonfee/src/app/user/login/login.component.css
+++ b/Commonfee/src/app/user/login/login.component.css
@@ -10,10 +10,9 @@
     padding: 4% 0;
     position: relative;
     background-size: cover;
-    font-family: "Noto Sans Thai", sans-serif;
   }
   .form-container form {
-      background:linear-gradient(90deg, #c97292,rgb(255, 209, 168));
+    background:linear-gradient(90deg, #c972bc,rgb(255, 209, 168));
       border: 2px solid rgba(128, 128, 128, 0.6);
       backdrop-filter: rgb(147, 147, 147);
       box-shadow: gray ;
@@ -21,7 +20,6 @@
       padding: 2rem;
       width: 450px;
       height: auto;
-      font-family: "Noto Sans Thai", sans-serif;
   .bi-eye-slash-fill.btn{
         border: none;
         position: absolute;
@@ -69,3 +67,4 @@
     text-decoration: none;
     color: black;
   }
+ 
