--- a/Commonfee/src/styles.css
+++ b/Commonfee/src/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 .noto-sans-thai-main {
     font-family: "Noto Sans Thai", sans-serif;
     font-optical-sizing: auto;
@@ -7,18 +8,16 @@
     font-variation-settings: "wdth" 100;
   }
 
-  body,html {
-    margin: 0; 
-    font-family: "Noto Sans Thai", sans-serif;
-    
-    
+  body,html 
+  body { 
+    font-family: "Noto Sans Thai", sans-serif; 
   }
   .content{
     padding-top: 60px;
+    justify-content: center;
   }
-  *{
-    font-family: "Noto Sans Thai", sans-serif;
-  }
+  
   .login-content {
     padding-top: 0;  /* ไม่มี padding-top ในหน้า login */
   }
+  
