--- a/Commonfee/src/app/side-service/side-service.component.html
+++ b/Commonfee/src/app/side-service/side-service.component.html
@@ -17,9 +17,9 @@
         <div class="menu">
           <ul class="menu-links">
             <li class="nav-link">
-              <a routerLink="/purchase">
+              <a routerLink="/service">
                 <i class="bi bi-wallet2 icon"></i>
-                <span class="text nav-text">ชำระเงิน</span>
+                <span class="text nav-text">บริการส่วนกลาง</span>
               </a>
             </li>
             <li class="nav-link">
@@ -61,14 +61,7 @@
             </li>
           </ul>
         </div>
-        <div class="bottom-content">
-          <li class="nav-link">
-            <a (click)="logout()" aria-label="Logout">
-              <i class="bi bi-box-arrow-left icon" style="margin-left: 30px;"></i>
-              <span class="text nav-text">Logout</span>
-            </a>
-          </li>
-        </div>        
+ 
       </div>
     </nav>
   </div>
