--- a/Commonfee/src/app/user/register/register.component.html
+++ b/Commonfee/src/app/user/register/register.component.html
@@ -183,6 +183,6 @@
     </div>
 
     <button type="submit" class="btn">ลงทะเบียน</button>
-    <div class="text-center pt-4 text-muted">คุณลงทะเบียนแล้วแล้วใช่ไหม? <a id="forget" routerLink="/login">เข้าสู่ระบบลูกบ้าน</a></div>
+    <div class="text-center pt-4 ">คุณลงทะเบียนแล้วแล้วใช่ไหม? <a id="forget" routerLink="/login">เข้าสู่ระบบลูกบ้าน</a></div>
   </form>
 </div>
