--- a/Commonfee/src/app/user/service/service.component.html
+++ b/Commonfee/src/app/user/service/service.component.html
@@ -1,4 +1,4 @@
-<app-sidebar></app-sidebar>
+<app-side-service/>
 <div class="user-services-container">
     <h3 style="text-align: center;">บริการสำหรับผู้อยู่อาศัย</h3>
     <ul>
