--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -5,9 +5,14 @@
     <img src="logo.png" alt=" logo" style="width: 150px;">
   </a>
 </div>
+<ul>
+  <li class="nav-item">
+    <a class="nav-link " aria-current="page" routerLink="/service">บริการ</a>
+  </li>
+</ul>
   <ul>
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="/service">บริการ</a>
+      <a class="nav-link " aria-current="page" routerLink="/purchase">ชำระเงิน</a>
     </li>
   </ul>
   <ul>
