--- a/Commonfee/src/app/user/login/login.component.html
+++ b/Commonfee/src/app/user/login/login.component.html
@@ -40,11 +40,11 @@
       <button
         type="submit"
         class="btn"
-    
+        style="font-weight: bold;"
       >
         Login
       </button>
-      <div class="text-center pt-4 ">คุณยังไม่ได้ลงทะเบียนใช่ไหม? <a id="forget" routerLink="/register">ลงทะเบียน</a></div>
+      <div class="text-center pt-4 q">คุณยังไม่ได้ลงทะเบียนใช่ไหม? <a id="forget" routerLink="/register">ลงทะเบียน</a></div>
   
 
     </form>
