--- a/Commonfee/src/app/user/register/register.component.css
+++ b/Commonfee/src/app/user/register/register.component.css
@@ -38,9 +38,12 @@
   width: 250px;
   height: 40px;
   border: 0;
+  background-color: #fdabbf;
+  color: #fff;
 }
 .form-container button:hover {
-  background-color: rgb(111, 185, 250);
+  background-color: #ffffff;
+  color: #686868;
   
 }
 a{
@@ -76,9 +79,6 @@ a{
   font-size: 12px;
 }
 
-.btn {
-  color: #fff;
-  background-color: #6fb9fa;
-  border-radius: 50px;
-  width: 100%;
+.text-center{
+  color: #D9D9D9;
 }
