--- a/Commonfee/src/app/user/service/service.component.css
+++ b/Commonfee/src/app/user/service/service.component.css
@@ -3,19 +3,20 @@
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background: #f9f9f9;
+    background: none;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+
 }
 
 
 .service-item {
-    background: #ffffff;
+    background: none;
     border: 1px solid #ddd;
     border-radius: 4px;
     margin-top: 10px;
     padding: 15px;
     list-style-type: none;
+    box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
 }
 
 
