--- a/Commonfee/src/app/user/status/status.component.css
+++ b/Commonfee/src/app/user/status/status.component.css
@@ -2,15 +2,13 @@
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f4f4f4;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
   }
   
   h3 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
   }
   
   .status-table {
@@ -26,8 +24,6 @@
   }
   
   .status-table th {
-    background-color: #f4f4f4;
-    color: #333;
     font-weight: bold;
   }
   
