--- a/Commonfee/src/styles.css
+++ b/Commonfee/src/styles.css
@@ -34,23 +34,11 @@
     
   }
   
-  .sidebar.closed {
-    width: 60px; /* ขนาด Sidebar เมื่อปิด */
-    transition: width 0.3s ease;
-  }
-  
-  /* ซ่อนข้อความเมื่อ Sidebar ปิด */
-  .sidebar.closed .text {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
-  
+
   /* ปุ่มสลับ Sidebar */
   .toggle-button {
     top: 100px;
     position: absolute; 
-    right: -20px; /* ตำแหน่งปุ่มเมื่อ Sidebar เปิด */
     height: 40px;
     width: 40px;
     background-color: #695CFE;
@@ -62,17 +50,12 @@
     border: none;
     cursor: pointer;
     transition: transform 0.3s ease, left 0.3s ease;
-    z-index: 1001; /* ให้อยู่เหนือ Sidebar */
+    z-index: 1001; 
   }
   
   /* ขยายปุ่มเมื่อ hover */
   .toggle-button:hover {
     transform: scale(1.1);
-  }
-  
-  /* ปรับตำแหน่งปุ่มเมื่อ Sidebar ปิด */
-  .sidebar.closed + .toggle-button {
-    left: 70px; /* ย้ายปุ่มเข้ามาทางซ้ายเมื่อ Sidebar ปิด */
   }
   
   .sidebar .text {
@@ -105,7 +88,6 @@
   
   .sidebar li .icon,
   .sidebar li .text {
-    color: #707070;
     transition: all 0.2s ease;
   }
   
@@ -134,16 +116,7 @@
     margin-top: -2px;
   }
   
-  
-  .search-box input{
-    height: 100%;
-    outline: none;
-    border: none;
-    border-radius: 6px;
-     background: none;
-    margin-left: 5px;
-    font-weight: 600;
-  }
+
   .sidebar li a{
     height: 100%;
     width: 100%;
@@ -152,6 +125,7 @@
     text-decoration: none;
     border-radius: 6px;
     transition: all 0.4s ease;
+    color: #000000;
   }
   .sidebar li a:hover{
     background-color: #695CFE;
@@ -183,19 +157,6 @@
     margin-right: 10px;
   }
   
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-  }
-  
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
   .slider {
     position: absolute;
     cursor: pointer;
@@ -221,26 +182,20 @@
     border-radius: 50%;
   }
   
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    transform: translateX(20px);
-  }
-  
+
   /* Light Mode */
   body.light-mode {
     background-color: #d9f4f9,;
     color: #000000;
    
   }
-  
+ 
   body.light-mode .sidebar {
     background-color: #ffffff;
     color: #000000;
     
   }
+
   
   /* Dark Mode */
   body.dark-mode {
@@ -253,9 +208,7 @@
     background-color: #333333;
     color: #ffffff;
   }
-  body.dark-mode .dropdown {
-    color: #ffffff;
-  }
+
   
   /* Light Mode */
   body.light-mode {
