--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -1,64 +1,48 @@
-
-<nav class="nav nav-underline justify-content-center">
-  <div class="d-flex align-items-left">
-  <a class="navbar-brand" routerLink="/home" style="font-size: 14px; ">
-    <img src="logo.png" alt=" logo" style="width: 150px;">
-  </a>
-</div>
-<ul>
-  <li class="nav-item">
-    <a class="nav-link " aria-current="page" routerLink="/service">บริการ</a>
-  </li>
-</ul>
-  <ul>
-    <li class="nav-item">
-      <a class="nav-link " aria-current="page" routerLink="/purchase">ชำระเงิน</a>
-    </li>
-  </ul>
-  <ul>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/status">ติดตามสถานะ</a>
-    </li>
-  </ul>
-    <ul>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/report">ร้องเรียน</a>
-    </li>
-  </ul>
-  <ul>
-    <li class="nav-item">
-      <a class="nav-link " routerLink="/about-us">เกี่ยวกับเรา</a>
-    </li>
-</ul> 
-  <ul>
-    <li class="nav-item profile">
-      <a class="nav-link " routerLink="/profile"><i class="bi bi-person-circle"></i></a>
-    </li>
-  </ul>
-
-  <div class="toggle">
-    <div class="moon-sun">
-      <i class="bi" [ngClass]="isDarkMode ? 'bi bi-sun' : 'bi bi-moon'" (click)="toggleDarkMode()"></i>
-    </div>
-    <span class="mode-text">{{ isDarkMode ? '' : '' }}</span>
-   
-  </div>
-
-<ul>
-  <li class="nav-item logout">
-    <a class="nav-link " (click)="logout()">
-      <i class="bi bi-box-arrow-left "style="margin-left=0;" ></i>
+<nav class="navbar navbar-expand-lg   d-flex justify-content-between" style=" margin-top: 0; padding: 0.25rem 1rem;">
+  <div class="d-flex align-items-center">
+    <a class="navbar-brand" routerLink="/home" style="font-size: 14px; margin-right: 1rem;">
+      <img src="logo.png" alt=" logo error" style="width: 150px;">
     </a>
-  </li>
-</ul>
-
-
-</nav>
-
-<div id="profilePopup" class="profile-popup" [ngStyle]="{ 'visibility': isProfilePopupVisible ? 'visible' : 'hidden' }">
-  <div class="profile-popup-content">
-    <img src="{{picture}}" alt="Profile image" class="profile-image">
-    <p>Hello {{ username }}</p>
-    <button class="edit-profile-btn" routerLink="/edit-profile" >Edit Profile</button>
+    <ul class="navbar-nav">
+      <li class="nav-item" routerLinkActive="active-nav-link">
+        <a class="nav-link " routerLink="/service" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">บริการ</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active-nav-link">
+        <a class="nav-link" routerLink="/purchase" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ชำระเงิน</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active-nav-link">
+        <a class="nav-link" routerLink="/status" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ติดตามสถานะ</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active-nav-link">
+        <a class="nav-link" routerLink="/report" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ร้องเรียน</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active-nav-link">
+        <a class="nav-link" routerLink="/about-us" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">เกี่ยวกับเรา</a>
+      </li>
+    </ul>
   </div>
-</div>
+ 
+  <div class="mr-auto d-flex align-items-center profile" style="margin-left: 1100px;">
+    <div class="toggle">
+      <div class="moon-sun">
+        <i class="bi" [ngClass]="isDarkMode ? 'bi bi-sun' : 'bi bi-moon'"  (click)="toggleDarkMode()"></i>
+      </div>
+      <span class="mode-text">{{ isDarkMode ? '' : '' }}</span>
+    </div>
+    <span (click)="toggleProfilePopup()" class="bi bi-person-circle icon" style="font-size: 16px; margin-right: 1rem; cursor: pointer;">
+    </span>
+    <div id="profilePopup" class="profile-popup" [ngStyle]="{ 'visibility': isProfilePopupVisible ? 'visible' : 'hidden' }">
+      <div class="profile-popup-content">
+        <img src="{{picture}}" alt="Profile image" class="profile-image">
+        <p>Hello {{ username }}</p>
+        <button class="edit-profile-btn" routerLink="/edit-profile" >Edit Profile</button>
+        </div>
+      </div>
+  
+    
+    
+    
+
+    <a class="nav-link bi bi-box-arrow-right" (click)="logout()" href="/" style="font-size: 20px; text-decoration: none;">&nbsp;</a>
+  </div>
+</nav>
