--- a/Commonfee/src/styles.css
+++ b/Commonfee/src/styles.css
@@ -13,7 +13,7 @@
     font-family: "Noto Sans Thai", sans-serif; 
   }
   .content{
-    padding-top: 60px;
+   /* padding-top: 60px; */
     justify-content: center;
   }
   
@@ -22,18 +22,28 @@
   }
   .sidebar {
     position: fixed; /* ทำให้ Sidebar คงที่ */
-    top: 0;
+    top: 75px;
     left: 0;
     width: 250px;
     height: 100vh;
     background-color: #333333;
     transition: width 0.3s ease;
     overflow: hidden;
-    z-index: 1000;
     border: .5px solid black;
     
   }
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+  }
   
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 
   /* ปุ่มสลับ Sidebar */
   .toggle-button {
