--- a/Commonfee/src/app/user/side-service/side-service.component.html
+++ b/Commonfee/src/app/user/side-service/side-service.component.html
@@ -1,9 +1,8 @@
 <div class="main">
     <nav class="sidebar" >
-          
       <div class="menu-bar">
         <div class="menu">
-          <ul class="menu-links">
+          <div class="menu-links">
             <li class="nav-link">
               <a routerLink="/service">
                 <i class="bi bi-wallet2 icon"></i>
@@ -11,38 +10,32 @@
               </a>
             </li>
             <li class="nav-link">
-              <a routerLink="/statusCommonfee">
+              <a routerLink="/commonfeeStatus">
                 <i class="bi bi-clipboard2-check icon"></i>
                 <span class="text nav-text">สถานะที่ส่วนกลาง</span>
               </a>
             </li>
             
             <li class="nav-link">
-              <a routerLink="/receipt">
+              <a routerLink="/bookRoom">
                 <i class="bi bi-receipt icon"></i>
-                <span class="text nav-text">จองห้องจัดเลี้ยง</span>
+                <span class="text nav-text">จองห้องส่วนกลาง</span>
               </a>
             </li>
             <li class="nav-link">
-              <a routerLink="/historyReport">
+              <a routerLink="/fitness">
                 <i class="bi bi-universal-access icon"></i>
                 <span class="text nav-text">จองคิวฟิตเนส</span>
               </a>
             </li>
             <li class="nav-link">
-              <a href="#">
-                <i class="bi bi-taxi-front icon"></i>
-                <span class="text nav-text">ลงทะเบียนรถ</span>
-              </a>
-            </li>
-            <li class="nav-link">
-              <a href="#">
-                <i class="bi bi-balloon-heart icon"></i>
-                <span class="text nav-text">ลงทะเบียนสัตว์</span>
+              <a routerLink="/historyBooking">
+                <i class="bi bi-hourglass-split icon"></i>
+                <span class="text nav-text">ประวัติการจอง</span>
               </a>
             </li>
            
-          </ul>
+          </div>
         </div>
  
       </div>
