--- a/Commonfee/src/app/user/header/header.component.css
+++ b/Commonfee/src/app/user/header/header.component.css
@@ -1,7 +1,13 @@
+.navbar{
+  width: 100%;
+}
 .dark-mode {
     background-color: #121212;
     color: #ffffff;
   }
+*{
+  color: #ffffff;
+}
 
   /* ปรับแต่งปุ่ม navbar */
   .navbar-nav .nav-link:hover {
@@ -98,7 +104,9 @@
     flex-direction: column;
     align-items: center;
   }
-  
+  .navbar{
+    width: 100%;
+  }
   .profile-image {
     background-size: cover;
     width: 100px;
