--- a/Commonfee/src/app/user/purchase/purchase.component.css
+++ b/Commonfee/src/app/user/purchase/purchase.component.css
@@ -1,6 +1,33 @@
+.filter{
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  width:1250px;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
+}
+
+.headfilter{
+  padding-top: 2rem;
+}
+
+.filtercontrol{
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem;
+}
+
+.formyear,.formmonth{
+  width: 100%;
+  border-radius: 10px;
+}
+
 .payment-section {
     text-align: center;
     margin: 20px auto;
+    
   }
   
   h2 {
@@ -11,6 +38,8 @@
     width: 65%;
     margin: 0 auto;
     border-collapse: collapse;
+    box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
+    margin-bottom: 20px;
   }
   
   .payment-table th, .payment-table td {
