--- a/Commonfee/src/app/user/status/status.component.css
+++ b/Commonfee/src/app/user/status/status.component.css
@@ -1,3 +1,28 @@
+.filter{
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  width:1000px;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
+}
+
+.headfilter{
+  padding-top: 2rem;
+}
+
+.filtercontrol{
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem;
+}
+
+.formyear,.formmonth{
+  width: 100%;
+  border-radius: 10px;
+}
 .container {
     max-width: 1000px;
     margin: 0 auto;
