--- a/Commonfee/src/styles.css
+++ b/Commonfee/src/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Dekko&family=Jost:ital@0;1&display=swap');
+
 .noto-sans-thai-main {
     font-family: "Noto Sans Thai", sans-serif;
     font-optical-sizing: auto;
@@ -7,13 +9,14 @@
     font-style: normal;
     font-variation-settings: "wdth" 100;
   }
-
+  
+ 
   body,html 
   body { 
     font-family: "Noto Sans Thai", sans-serif; 
   }
   .content{
-   /* padding-top: 60px; */
+    padding-top: 60px;
     justify-content: center;
   }
   
@@ -45,28 +48,6 @@
     height: 0;
   }
 
-  /* ปุ่มสลับ Sidebar */
-  .toggle-button {
-    top: 100px;
-    position: absolute; 
-    height: 40px;
-    width: 40px;
-    background-color: #695CFE;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    transition: transform 0.3s ease, left 0.3s ease;
-    z-index: 1001; 
-  }
-  
-  /* ขยายปุ่มเมื่อ hover */
-  .toggle-button:hover {
-    transform: scale(1.1);
-  }
   
   .sidebar .text {
     font-size: 16px;
