--- a/Commonfee/src/app/admin/dashboard/dashboard.component.css
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.css
@@ -2,3 +2,61 @@
     font-family: "Dekko", cursive;
     text-align: center;
 }
+.village-layout {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border: 50px solid #68964a;
+
+  }
+  
+  .road {
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+  }
+   
+  .house-row {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap; /* ทำให้กล่องสามารถขึ้นบรรทัดใหม่ได้ */
+
+  }
+  
+  .house {
+    background-color: #ffcc80;
+    border: 2px solid #ff7043;
+    padding: 20px;
+    flex: 1;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: black;
+  }
+  .bg{
+    background: #999998;
+    border-radius: 20px;
+    width: 1200px;
+    margin-left: 370px;
+  }
+  .new-row {
+    flex-basis: 100%; /* บังคับให้เริ่มต้นที่บรรทัดใหม่ */
+  }
+  
+  .six{
+    margin-right: 100px;
+  }
+  .eighteen{
+    margin-right: 100px;
+  }
+  .thirty{
+    margin-right: 100px;
+  }
+  /* .thirty-nine{
+    margin-right: 100px;
+  } */
+
+ 
