--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <app-admin-sidebar></app-admin-sidebar>
+<div class="layout">
 <div class="container">
     <div class="header">
         <h1>dashboard</h1>
@@ -70,4 +71,4 @@
       </div>
     </div>
   </div>
-  
+</div>
