--- a/Commonfee/src/app/admin/charts/charts.component.html
+++ b/Commonfee/src/app/admin/charts/charts.component.html
@@ -1,8 +1,10 @@
 <div class="charts">
-    <div class="pie" [chart]="pieChart">
-        
-    </div>
-    <div class="line" [chart]="lineCharts">
 
+    <div class="pie" [chart]="pieChart">
+  
     </div>
-</div>
+  
+    <div class="line" [chart]="lineChart">
+  
+    </div>
+  </div>
