--- a/Commonfee/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/Commonfee/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -1,6 +1,6 @@
 
 
-  <div class="sidebar" [ngClass]="{'open': isOpen}">
+  <div class="sidebar" >
     <header>
       <div class="image-text">
         <span class="image">
@@ -61,6 +61,6 @@
       </div>
     </div>
   </div>
-  <div class="main-content" [ngClass]="{'slide': isOpen}">
+  <!-- <div class="main-content" [ngClass]="{'slide': isOpen}">
     <button class="main-content" (click)="toggleSidebar()">{{ isOpen ? '× ' : '☰ ' }}</button>
-</div>
+</div> -->
