--- a/Commonfee/src/app/admin/charts/charts.component.html
+++ b/Commonfee/src/app/admin/charts/charts.component.html
@@ -4,7 +4,7 @@
   
     </div>
   
-    <div class="line" [chart]="lineChart">
+    <div class="line" [chart]="lineCharts">
   
     </div>
   </div>
