--- a/Commonfee/src/app/admin/dashboard/dashboard.component.css
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.css
@@ -45,7 +45,7 @@
   color: black;
 }
 .bg{
-  background: #999998;
+  background: #676767;
   border-radius: 20px;
   width: 800px;
   margin-left: 20px;
@@ -67,3 +67,96 @@
   margin-right: 100px;
 } */
 
+.showvalue{
+  display: flex;
+}
+.reviewdetail{
+  text-align: center;
+  height: 475px;
+  border: 2px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(89, 24, 174, 0.3);
+}
+.showdetail{
+  text-align: center;
+  height: 100px;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: 2rem;
+  box-shadow: 5px 5px 10px rgba(89, 24, 174, 0.3);
+}
+
+.showdetail h5{
+  margin-top: 1rem;
+}
+.modal {
+  position: fixed;
+  color: #000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* พื้นหลังโปร่งแสง */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1050; /* ให้ modal อยู่ด้านบนสุด */
+}
+
+.modal-dialog {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  width: 90%;
+  max-width: 500px; /* กำหนดขนาดสูงสุดของ modal */
+}
+
+.modal-content {
+  padding: 20px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+}
+
+.modal-title {
+  font-size: 1.2rem;
+}
+
+.close {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.modal-body {
+  margin-top: 10px;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.charts{
+  display: flex;
+  margin: 20px;
+}
+.pie{
+  flex: 1;
+  box-shadow:10px 10px 5px #aaa;
+  margin-right: 20px;
+}
+.line{
+  flex: 1;
+  box-shadow:10px 10px 5px #aaa;
+  color: #fda95b;
+}
+table, th, td {
+  border: none;
+  background: none;
+}
