--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
   <div class="col">
       <div class="showdetail">
           <h5>ค้างชำระ</h5>
-          <h6>20%</h6>
+          <button type="button" class="btn btn-primary" >แจ้งเตือน</button>
       </div>
   </div>
   <div class="col">
