--- a/Commonfee/src/app/admin/resident-list/resident-list.component.html
+++ b/Commonfee/src/app/admin/resident-list/resident-list.component.html
@@ -4,3 +4,114 @@
         <h1>Resident List</h1>
     </div>
 </div>
+<!-- <div class="resident">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>เลขบัตรประชาชน</th>
+                <th>ชื่อ</th>
+                <th>นามสกุล</th>
+                <th>บ้านเลขที่</th>
+                <th>เบอร์โทรศัพท์</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1101125479568</td>
+                <td>นันทนาธร</td>
+                <td>ซื่อตรง</td>
+                <td>123/456</td>
+                <td>1234567890</td>
+            </tr>
+        </tbody>
+    </table>
+</div> -->
+
+<button (click)="openModal()" class="btn-register">ลงทะเบียน</button>
+
+<div class="profile-cards-container">
+    <div class="profile-card">
+      <div class="profile-image">
+        <img src="profile.jpg" alt="Profile" />
+      </div>
+      <div class="profile-details">
+        <p>เลขบัตรประชาชน: 1101125479568</p>
+        <p>ชื่อ :นันทนาธร</p>
+        <p>นามสกุล : ซื่อตรง</p>
+        <p>เลขที่บ้าน :123/456</p>
+        <p>เบอร์มือถือ : 0235687894</p>
+      </div>
+    </div>
+
+    <!-- ทำ modal สำหรับการลงทะเบียนลูกบ้าน -->
+    <div class="modal" [class.show]="isModalOpen">
+        <div class="modal-content">
+          <span class="close" (click)="closeModal()">&times;</span>
+          <h2>ลงทะเบียนผู้สมัคร</h2>
+      
+          <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
+            <div class="form-grid">
+              <div class="form-group">
+                <label for="idCard">เลขบัตรประชาชน:</label>
+                <input
+                  type="text"
+                  id="idCard"
+                  name="idCard"
+                  [(ngModel)]="user.idCard"
+                  pattern="[0-9]{13}"
+                  required
+                 
+                />
+              </div>
+      
+              <div class="form-group">
+                <label for="firstName">ชื่อ:</label>
+                <input
+                  type="text"
+                  id="firstName"
+                  name="firstName"
+                  [(ngModel)]="user.firstName"
+                  required
+                />
+              </div>
+      
+              <!-- Column 2 -->
+              <div class="form-group">
+                <label for="lastName">นามสกุล:</label>
+                <input
+                  type="text"
+                  id="lastName"
+                  name="lastName"
+                  [(ngModel)]="user.lastName"
+                  required
+                />
+              </div>
+      
+              <div class="form-group">
+                <label for="houseNo">บ้านเลขที่:</label>
+                <input
+                  type="text"
+                  id="houseNo"
+                  name="houseNo"
+                  [(ngModel)]="user.houseNo"
+                  required
+                />
+              </div>
+      
+              <div class="form-group">
+                <label for="phone">เบอร์โทร:</label>
+                <input
+                  type="tel"
+                  id="phone"
+                  name="phone"
+                  [(ngModel)]="user.phone"
+                  pattern="[0-9]{10}"
+                  required
+                />
+              </div>
+            </div>
+      
+            <button type="submit" class="btn-submit">บันทึก</button>
+          </form>
+        </div>
+      </div>
