--- a/Commonfee/src/app/user/home/home.component.html
+++ b/Commonfee/src/app/user/home/home.component.html
@@ -19,42 +19,15 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body text-center" style="position: absolute; top: 15%;">
-                      <p class="card-text">ขณะนี้ ถนนหน้าบ้านเลขที่ 33/3 ได้ทำการซ่อมบำรุงเสร็จสิ้นและสามารถกลับมาใช้สัญจรได้ตามปกติ</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      <p class="card-text"><small class="text-body-secondary">{{ Announce.Date }}</small></p>
+                      <p class="card-text">{{ Announce.Title}}</p>
+                      <p class="card-text">{{ Announce.Detail}}</p>
                     </div>
                   </div>
                 </div>
               </div>
         </div>
-        <div class="col-12">
-            <div class="card mb-3" style="max-width: 100rem;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="/สระว่ายน้ำ.jpg" class="img-fluid rounded-start" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body text-center" style="position: absolute; top: 20%; ">
-                      <p class="card-text">ขณะนี้ สระว่ายน้ำส่วนกลางของหมู่บ้านได้ทำการเปิดให้บริการแล้ว</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </div>
+
     </div>
-    <div class="col-12">
-        <div class="card mb-3" style="max-width: 100rem;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="/สวนสาธารณะ.jpg" class="img-fluid rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body text-center" style="position: absolute; top: 20%; ">
-                  <p class="card-text">แจ้งปิดสวนสาธารณะ เพื่อทำการซ่อมบำรุงสวนสาธารณะ</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-    </div>
+
 </div>
